dev: fix header on smaller screens

--- a/app/assets/sass/patterns/_header-internal.scss
+++ b/app/assets/sass/patterns/_header-internal.scss
@@ -98,7 +98,7 @@
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 640px) {
 
   .header-name {
     font-size: 20px;
